--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -24,7 +24,7 @@ jobs:
       run: npm install
 
     - name: Build project
-      run: npm run build
+      run: npx quartz build
 
     - name: Deploy to Cloudflare Pages
       env:
