--- a/.github/workflows/content-update.yml
+++ b/.github/workflows/content-update.yml
@@ -23,7 +23,7 @@ jobs:
         run: npm install
 
       - name: Build project
-        run: npm run build
+        run: npx quartz build
 
       - name: Trigger Cloudflare Pages
         run: curl -X POST ${{ secrets.CLOUDFLARE_WEBHOOK_URL }}
