--- a/.github/workflows/content-update.yml
+++ b/.github/workflows/content-update.yml
@@ -33,5 +33,18 @@ jobs:
       - name: Build project
         run: npx quartz build
 
+      - name: Commit and push submodule update
+        env:
+          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
+        run: |
+          git config --global user.name "github-actions[bot]"
+          git config --global user.email "github-actions[bot]@users.noreply.github.com"
+          git add .
+          git commit -m "Update submodule to latest commit"
+          git push origin v4
+
       - name: Trigger Cloudflare Pages
         run: curl -X POST ${{ secrets.CLOUDFLARE_WEBHOOK_URL_PROD }}
+
+      - name: Debug event
+        run: echo "Event name: ${{ github.event_name }}"
