--- a/package.json
+++ b/package.json
@@ -54,6 +54,7 @@
     "is-absolute-url": "^4.0.1",
     "js-yaml": "^4.1.0",
     "lightningcss": "^1.24.1",
+    "lucide-preact": "^0.394.0",
     "mdast-util-find-and-replace": "^3.0.1",
     "mdast-util-to-hast": "^13.1.0",
     "mdast-util-to-string": "^4.0.0",
